

syntax = "proto3";

import "google/protobuf/timestamp.proto";

package fornecedor;

option java_package = "com.stellato.gprc.fornecedor";
option java_multiple_files = true;

message FornecedorRequest {
  int32 iden_fornecedor = 1;
}

message FornecedorResponse {
  int32 resposta =1;
  string razao_social = 2;
  string cnpj = 3;
}

enum FornecedorErrorCode {
  INVALID_FORNECEDOR_ID_VALUE = 0;
  FORNECEDOR_ID_CANNOT_BE_NULL = 1;
}

message FornecedorExceptionResponse {
  google.protobuf.Timestamp timestamp = 1;
  FornecedorErrorCode error_code = 2;
}

service FornecedorService {
  // unary
  rpc verificaFornecedor(FornecedorRequest) returns (FornecedorResponse) {};
}